First changes to the script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 #This is for usernames and passwords.
 
 .settings
+.env
+
+API Key: BiGwMUbVb8Dyftl48yOZm3zlm
+API Key Secret: HIFigyPMzgnGGIU8Hjn8tFsyz4ORMxG50icmACQPgRCJ10fg9b
+Bearer Token: AAAAAAAAAAAAAAAAAAAAADaZVAEAAAAA6dOsxDzoDMS160%2B984WOUCUh%2FsY%3DLP8Fwh6oo2YeVis9zeO6VJVkSI22M5CIwugTbw4ITlTjs94B4K
