First tests with NLTK VADER and found an issue with the data.

--- a/Master_Thesis/pyproject.toml
+++ b/Master_Thesis/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.22.2"
 ipykernel = "^6.9.1"
 matplot = "^0.1.9"
 pandas = "^1.4.1"
+nltk = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
