I have worked on the virtual env and update several files. Furthermore, I tested several new things with the VADER rule based sentiment analysis. It seems to work as expected, even if a few words might be missing and not everything is perfekt. But if the overal results are fine, the end result will be good, too.

--- a/Master_Thesis/pyproject.toml
+++ b/Master_Thesis/pyproject.toml
@@ -11,6 +11,7 @@ ipykernel = "^6.9.1"
 matplot = "^0.1.9"
 pandas = "^1.4.1"
 nltk = "^3.7"
+vaderSentiment = "^3.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
