--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -14,6 +14,7 @@ ipykernel = "^6.9.2"
 nltk = "^3.7"
 vader = "^0.0.3"
 vaderSentiment = "^3.3.2"
+stanza = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
