--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -15,6 +15,10 @@ nltk = "^3.7"
 vader = "^0.0.3"
 vaderSentiment = "^3.3.2"
 stanza = "^1.3.0"
+germansentiment = "^1.0.7"
+transformers = "^4.18.0"
+python-dotenv = "^0.20.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
