--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -19,6 +19,7 @@ germansentiment = "^1.0.7"
 transformers = "^4.18.0"
 python-dotenv = "^0.20.0"
 requests = "^2.27.1"
+wordcloud = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
