--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -20,6 +20,7 @@ transformers = "^4.18.0"
 python-dotenv = "^0.20.0"
 requests = "^2.27.1"
 wordcloud = "^1.8.1"
+HanTa = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
