--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -21,6 +21,8 @@ python-dotenv = "^0.20.0"
 requests = "^2.27.1"
 wordcloud = "^1.8.1"
 HanTa = "^0.2.0"
+torch = "^1.12.0"
+emoji = "2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
