I have started to test the regression. First file is just a mess but I got a lot of information and knowledge by trying a lot of things. The second new file "Regression" has already the functions to use the regression.
I still need to check how I could do more complex regressions.

--- a/master_thesis_3.9.10/pyproject.toml
+++ b/master_thesis_3.9.10/pyproject.toml
@@ -23,6 +23,7 @@ wordcloud = "^1.8.1"
 HanTa = "^0.2.0"
 torch = "^1.12.0"
 emoji = "2.0.0"
+statsmodels = "^0.13.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
